# qr

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  gen.py  readme.md
docs/: readme.md
src/: bitstream.h  drawer.rs  encoder.cc  encoder.h  encoder.rs  galois.h  lib.rs  main.cc  main.rs  message.cc  message.h  tables.h  tables.rs  tests.cc  utils.h
